Added some kind of transactions
